# avr-clion

./: CMakeLists.txt  README.md  easyavr.h  main.c
